--- a/templates/pengaturan.html
+++ b/templates/pengaturan.html
@@ -11,7 +11,7 @@
 {% set shifts = ['shift1', 'shift2', 'shift3', 'shift4'] %}
 
 
-<div class="container my-5">
+<div class="container mb-5">
     <h3 class="fw-bold mb-4 page-title"><i class="bi bi-gear-fill me-2"></i>Pengaturan Sistem Absensi</h3>
     <div class="row g-4 justify-content-center">
         <div class="col-lg-4 col-md-6">
