--- a/templates/absensi.html
+++ b/templates/absensi.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container my-4">
+<div class="container mb-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h3 class="fw-bold mb-4 page-title"><i class="bi bi-clipboard-check me-2"></i>Laporan Absensi Siswa</h3>
         <form method="GET" action="{{ url_for('absensi_bp.absensi') }}" class="d-flex align-items-center gap-2">
