--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -74,7 +74,7 @@
     }
 </style>
 
-<div class="container my-4">
+<div class="container">
     <h3 class="fw-bold mb-4 page-title"><i class="bi bi-speedometer2 me-2"></i>Dashboard Absensi</h3>
     {% if info_hari_ini %}
     <div class="alert alert-danger text-center fw-bold" role="alert">
