--- a/templates/export_laporan.html
+++ b/templates/export_laporan.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container my-5">
+<div class="container mb-5">
     <h3 class="fw-bold mb-4 page-title"><i class="bi bi-file-earmark-arrow-down me-2"></i>Export Laporan Absensi</h3>
 
     <!-- FORM EKSPOR -->
