--- a/templates/jadwal_keamanan.html
+++ b/templates/jadwal_keamanan.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container-fluid mt-4">
+<div class="container-fluid">
     <h3 class="fw-bold mb-4 page-title"><i class="bi bi-calendar2-week me-2"></i>Jadwal Keamanan Bulanan</h3>
     <div class="d-flex align-items-center justify-content-between mb-3">
         <form method="GET" action="{{ url_for('jadwal_keamanan_bp.jadwal_keamanan') }}" class="d-flex align-items-center">
