--- a/templates/kelola_kelas.html
+++ b/templates/kelola_kelas.html
@@ -3,7 +3,7 @@
 {% block title %}Kelola Kelas{% endblock %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="container">
     <h3 class="fw-bold mb-4 page-title"><i class="bi bi-book me-2"></i>Kelola Kelas</h3>
     <div class="d-flex justify-content-end mb-3 gap-2">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tambahKelasModal">
