--- a/templates/login.html
+++ b/templates/login.html
@@ -50,7 +50,7 @@
         }
 
         .btn-scan-main {
-            background-color: #198754;
+            background-color: #0d6efd; 
             border: none;
             border-radius: 15px;
             padding: 1rem;
@@ -66,7 +66,7 @@
         }
 
         .btn-scan-main:hover {
-            background-color: #157347;
+            background-color: #0b5ed7; 
             transform: translateY(-3px);
             color: white;
         }
