--- a/templates/siswa.html
+++ b/templates/siswa.html
@@ -3,7 +3,7 @@
 {% block title %}Kelola Siswa{% endblock %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="container">
     <h3 class="fw-bold mb-4 page-title"><i class="bi bi-person-fill me-2"></i>Kelola Data Siswa</h3>
     <div class="d-flex justify-content-end mb-3 gap-2">
         <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#filterModal">
