--- a/templates/siswa.html
+++ b/templates/siswa.html
@@ -12,10 +12,14 @@
         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#importModal">
             <i class="bi bi-file-earmark-arrow-up me-2"></i>Import dari CSV
         </button>
+        <a href="{{ url_for('siswa_bp.download_all_qr') }}" class="btn btn-secondary">
+            <i class="bi bi-folder-symlink me-2"></i>Download Semua QR
+        </a>
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tambahSiswaModal">
             <i class="bi bi-plus-circle me-2"></i>Tambah Siswa
         </button>
     </div>
+
 
     <div class="card shadow-sm">
         <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
